# flexsched

./: CMakeLists.txt  Dockerfile  Makefile  README  extract_greedy_results.pl  extract_lpbound_results.pl  flexsched.c  flexsched.h  flexsched2.c  ga_compute_mapping.C  generate_dataset_small.sh  genetic.c  glpk.c  greedy.c  hetero-scripts.tar.bz2  input  linearprog.c  main.c  run_all.sh  scripts.tar.bz2  util.c  vector.c  vecutil.c
log/: 2012-07-24.txt  2012-07-28.txt  pb-100.txt
notes/: distribution.txt  g5k.txt  g5k_hw_dist.txt  hw_spec_dist.txt  mem_summary.txt  ndist.txt  norm_mem_summary.txt  req_sum_dist.txt  summary.txt  task_spec_dist.txt  temp.txt  testme.txt
scripts/: aggregate_results.pl  compile_results.sh  compile_results2.sh  count_machine_classes.py  extract_lp_results.pl  generate_dataset.sh  generate_dataset_large.sh  generate_dataset_small.sh  (+15 more)
src/: CMakeLists.txt  Makefile  chekuri.c  flexsched.h  genparallelprob.c  greedy.c  hetero.c  linearprog.c  linearprog.h  linutil.c  main.c  util.c  vector.c  vector.h  vecutil.c
src/include/: flexsched.h
src/lib/: CMakeLists.txt
src/lib/flexsched/: CMakeLists.txt  util.c
src/lib/flexsched/greedy/: greedy.c
src/lib/flexsched/linear/: linearprog.c
src/lib/flexsched/vector/: hetero.c  vector.c  vector.h  vecutil.c
src/lib/schedulers/: CMakeLists.txt  hetero.c  linutil.c  vecutil.c
src/lib/schedulers/vector/: vector.h
src/tools/: CMakeLists.txt
src/tools/flexsched/: CMakeLists.txt  main.c
src/tools/flexsched_static/: CMakeLists.txt  flexsched_static.c
src/tools/staticsched/: CMakeLists.txt
(+5 files in other folders)
